Add find endpoint to search by path
